[package]
name = "lost-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
rand = "0.8.5"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "voice"]
version = "0.11.6"

[dependencies.chrono]
version = "0.4.19"
features = ["clock"]
